@@ -5,6 +5,8 @@ import com.br.mamba_wedding.gifts.domain.GiftTransaction;
 import com.br.mamba_wedding.gifts.domain.TransactionStatus;
 import com.br.mamba_wedding.gifts.infrastructure.GiftRepository;
 import com.br.mamba_wedding.gifts.infrastructure.GiftTransactionRepository;
+import com.br.mamba_wedding.guests.domain.Guest;
+import com.br.mamba_wedding.guests.infrastructure.GuestRepository;
 import com.br.mamba_wedding.payment.application.PaymentGateway;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -20,126 +22,114 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class GiftServiceTest {
 
-    @Mock
-    private GiftRepository giftRepository;
+    @Mock GiftRepository giftRepository;
+    @Mock GiftTransactionRepository giftTransactionRepository;
+    @Mock PaymentGateway paymentGateway;
+    @Mock GuestRepository guestRepository;
+    @InjectMocks GiftService giftService;
 
-    @Mock
-    private GiftTransactionRepository giftTransactionRepository;
-
-    @Mock
-    private PaymentGateway paymentGateway;
-
-    @InjectMocks
-    private GiftService giftService;
-
-    private Gift sampleGift;
+    private Gift gift;
+    private Guest guest;
 
     @BeforeEach
     void setUp() {
-        sampleGift = Gift.builder()
-                .id(1L)
-                .name("Televisão")
-                .value(new BigDecimal("3000.00"))
-                .totalQuotas(3)
-                .transactions(new ArrayList<>())
-                .build();
+        guest = Guest.builder().id(10L).fullName("Convidado Teste").build();
+        gift = Gift.builder().id(1L).name("Televisão").value(new BigDecimal("3000.00"))
+                .totalQuotas(3).transactions(new ArrayList<>()).build();
     }
 
     @Test
-    void reserve_ShouldReserveQuotasSuccessfully() {
-        // Arrange
-        when(giftRepository.findById(1L)).thenReturn(Optional.of(sampleGift));
+    void reserve_ShouldAssociateReservationWithGuest() {
+        when(giftRepository.findByIdForUpdate(1L)).thenReturn(Optional.of(gift));
+        when(guestRepository.findById(10L)).thenReturn(Optional.of(guest));
 
-        // Act
-        giftService.reserve(1L, "Convidado Teste", 2);
+        giftService.reserve(1L, 10L, 2);
 
-        // Assert
-        assertEquals(1, sampleGift.getTransactions().size());
-        GiftTransaction transaction = sampleGift.getTransactions().get(0);
-        assertEquals("Convidado Teste", transaction.getGuestName());
+        GiftTransaction transaction = gift.getTransactions().getFirst();
+        assertSame(guest, transaction.getGuest());
         assertEquals(2, transaction.getNumberQuotas());
         assertEquals(TransactionStatus.RESERVED, transaction.getStatus());
-        verify(giftRepository, times(1)).save(sampleGift);
+        verify(giftRepository).save(gift);
     }
 
     @Test
-    void reserve_ShouldThrowExceptionWhenQuotasExceedAvailable() {
-        // Arrange
-        when(giftRepository.findById(1L)).thenReturn(Optional.of(sampleGift));
+    void reserve_ShouldRejectUnavailableQuotas() {
+        when(giftRepository.findByIdForUpdate(1L)).thenReturn(Optional.of(gift));
+        when(guestRepository.findById(10L)).thenReturn(Optional.of(guest));
 
-        // Act & Assert
-        IllegalStateException exception = assertThrows(IllegalStateException.class, () -> {
-            giftService.reserve(1L, "Convidado Teste", 4); // Tentando reservar 4, mas só há 3
-        });
-
-        assertEquals("Quantidade indisponível. Restam apenas 3 cotas para esse presente.", exception.getMessage());
+        assertThrows(IllegalStateException.class, () -> giftService.reserve(1L, 10L, 4));
         verify(giftRepository, never()).save(any());
     }
 
     @Test
-    void buy_ShouldProcessPaymentAndChangeStatus() {
-        // Arrange
-        GiftTransaction reservation = GiftTransaction.builder()
-                .guestName("Convidado Teste")
-                .numberQuotas(1)
-                .status(TransactionStatus.RESERVED)
-                .reservedUntil(LocalDateTime.now().plusHours(1))
-                .build();
-        sampleGift.getTransactions().add(reservation);
+    void reserve_ShouldRejectSecondActiveReservationForSameGuest() {
+        gift.getTransactions().add(activeReservation());
+        when(giftRepository.findByIdForUpdate(1L)).thenReturn(Optional.of(gift));
+        when(guestRepository.findById(10L)).thenReturn(Optional.of(guest));
 
-        when(giftRepository.findById(1L)).thenReturn(Optional.of(sampleGift));
+        IllegalStateException error = assertThrows(IllegalStateException.class,
+                () -> giftService.reserve(1L, 10L, 1));
 
-        // Act
-        giftService.buy(1L, "Convidado Teste");
-
-        // Assert
-        verify(paymentGateway, times(1)).processPayment(eq(reservation), any(BigDecimal.class));
-        assertEquals(TransactionStatus.PURCHASED, reservation.getStatus());
-        assertNotNull(reservation.getPurchasedAt());
-        assertNull(reservation.getReservedUntil()); // O prazo de reserva deve ser limpo
-        verify(giftRepository, times(1)).save(sampleGift);
+        assertEquals("Você já possui uma reserva ativa deste presente.", error.getMessage());
     }
 
     @Test
-    void buy_ShouldThrowExceptionWhenNoReservationFound() {
-        // Arrange
-        when(giftRepository.findById(1L)).thenReturn(Optional.of(sampleGift));
-        // Nota: Não adicionamos nenhuma reserva ao sampleGift
+    void buy_ShouldProcessActiveReservation() {
+        GiftTransaction reservation = activeReservation();
+        gift.getTransactions().add(reservation);
+        when(giftRepository.findByIdForUpdate(1L)).thenReturn(Optional.of(gift));
 
-        // Act & Assert
-        IllegalStateException exception = assertThrows(IllegalStateException.class, () -> {
-            giftService.buy(1L, "Convidado Sem Reserva");
-        });
+        giftService.buy(1L, 10L);
 
-        assertEquals("Nenhuma reserva encontrada. Por favor, reserve as cotas antes de pagar.", exception.getMessage());
-        verify(paymentGateway, never()).processPayment(any(), any());
+        verify(paymentGateway).processPayment(eq(reservation), eq(new BigDecimal("1000.00")));
+        assertEquals(TransactionStatus.PURCHASED, reservation.getStatus());
+        assertNotNull(reservation.getPurchasedAt());
+        assertNull(reservation.getReservedUntil());
+    }
+
+    @Test
+    void buy_ShouldRejectExpiredReservationWithoutCallingGateway() {
+        GiftTransaction reservation = activeReservation();
+        reservation.setReservedUntil(LocalDateTime.now().minusMinutes(1));
+        gift.getTransactions().add(reservation);
+        when(giftRepository.findByIdForUpdate(1L)).thenReturn(Optional.of(gift));
+
+        assertThrows(IllegalStateException.class, () -> giftService.buy(1L, 10L));
+        verifyNoInteractions(paymentGateway);
+    }
+
+    @Test
+    void cancel_ShouldOnlyCancelAuthenticatedGuestsReservation() {
+        GiftTransaction reservation = activeReservation();
+        gift.getTransactions().add(reservation);
+        when(giftRepository.findByIdForUpdate(1L)).thenReturn(Optional.of(gift));
+
+        giftService.cancelReserve(1L, 10L);
+
+        assertEquals(TransactionStatus.CANCELED, reservation.getStatus());
     }
 
     @Test
     void clearExpiredReservations_ShouldCancelExpiredReservations() {
-        // Arrange
-        GiftTransaction expiredTransaction = GiftTransaction.builder()
-                .status(TransactionStatus.RESERVED)
-                .reservedUntil(LocalDateTime.now().minusMinutes(10)) // Expirou no passado
-                .build();
-
+        GiftTransaction expired = GiftTransaction.builder().status(TransactionStatus.RESERVED)
+                .reservedUntil(LocalDateTime.now().minusMinutes(10)).build();
         when(giftTransactionRepository.findByStatusAndReservedUntilBefore(
-                eq(TransactionStatus.RESERVED), any(LocalDateTime.class)))
-                .thenReturn(List.of(expiredTransaction));
+                eq(TransactionStatus.RESERVED), any(LocalDateTime.class))).thenReturn(List.of(expired));
 
-        // Act
         giftService.clearExpiredReservations();
 
-        // Assert
-        assertEquals(TransactionStatus.CANCELED, expiredTransaction.getStatus());
-        verify(giftTransactionRepository, times(1)).saveAll(anyList());
+        assertEquals(TransactionStatus.CANCELED, expired.getStatus());
+        verify(giftTransactionRepository).saveAll(anyList());
+    }
+
+    private GiftTransaction activeReservation() {
+        return GiftTransaction.builder().guest(guest).numberQuotas(1).status(TransactionStatus.RESERVED)
+                .reservedUntil(LocalDateTime.now().plusHours(1)).build();
     }
 }
